--- a/refs.bib
+++ b/refs.bib
@@ -110,3 +110,30 @@
 	url          = {https://www.nextflow.io/docs/latest/tracing.html#trace-report},
 	editor       = {{nextflow.io}}
 }
+@book{dag, title={Shootstrap Pipeline DAG}, url={https://www.nextflow.io/docs/latest/_images/dag.png}, journal={Nextflow}, publisher={Nextflow}, author={Nextflow}, year={2021}}
+@ARTICLE{Tanenbaum,
+    author = {Henri E. Bal and Jennifer G. Steiner and Andrew S. Tanenbaum},
+    title = {Programming languages for distributed computing systems},
+    journal = {ACM Computing Surveys},
+    year = {1989},
+    pages = {32--2}
+}
+@misc{Gray, place={Mountain View}, title={Jim Gray on eScience: A Transformed Scientific Method}, url={http://languagelog.ldc.upenn.edu/myl/JimGrayOnE-Science.pdf}, journal={NRC-CSTB}, publisher={California}, author={Gray, Jim}, year={2007}, month={Jan}}
+@book{Shields,
+author="Shields, Matthew",
+editor="Taylor, Ian J.
+and Deelman, Ewa
+and Gannon, Dennis B.
+and Shields, Matthew",
+title="Control- Versus Data-Driven Workflows",
+bookTitle="Workflows for e-Science: Scientific Workflows for Grids",
+year="2007",
+publisher="Springer London",
+address="London",
+pages="167--173",
+abstract="Workflow is typically defined as a sequence of operations or tasks needed to manage a business process or computational activity (Chapter 1). The representation of the sequence of operations or tasks is handled in many different ways by different people and varies from simple scripting languages, through graphs represented in textual or graphical form, to mathematical representations such as Petri Nets (Chapter 13) or $\pi$-calculus (Chapter 15).",
+isbn="978-1-84628-757-2",
+doi="10.1007/978-1-84628-757-2_11",
+url="https://doi.org/10.1007/978-1-84628-757-2_11"
+}
+
