finished scientific workflow and workflow managers sections, changed logo to DOS, tidied up some other stuff

--- a/frontmatter/front.tex
+++ b/frontmatter/front.tex
@@ -21,6 +21,6 @@
 
 Examiner 1: Prof. Dr. Odej Kao
 \hfill\llap{Advisor: Jonathan Bader}\\
-%Examiner 2: SECOND EXAMINER
+Examiner 2: Prof. Dr. Volker Markl
 
 \afterpage{\null\thispagestyle{empty}\newpage}
