--- a/mainmatter/01_introduction.tex
+++ b/mainmatter/01_introduction.tex
@@ -10,10 +10,7 @@ This chapter gives a general introduction to the content of and the motivation f
 \section{Motivation \& Problem Description}
 \label{sec:motivation}
 
-%Thus, many executives feel fear to become unconscious \cite{TheInquisitiveMind}.
-%Also, I want to buy \signal{smart home devices} such as the ones listed in table \ref{tab:scenario1_sensor}.
-
-The rising popularity of scientific workflows and the enormity of the aggregate resource requirements of their constituent tasks \cite{ResourceProvisioning} presents an opportunity to try and fine tune the resources allocated to these tasks in order to achieve better performance. Since a scientific workflow is composed of many tasks which each have unique relationships between the resources they require, their input, and how it affects their performance, it becomes cumbersome or even futile to try and hand-pick the most efficient resource allocation for each individual task. Furthermore as the tasks themselves or their order in a workflow might change over time it is also difficult to adapt to this. In addition to all of this it also quite common that the users may not have the requisite knowledge to properly size the tasks themselves and tend to make poor estimations \cite{Predictability} of what a given task's resource requirements are. And finally it must also be considered that for a given use case the exact topology of the deployment scenario (i.e. whether it is being run on an individual computer, in a grid or cluster, or on a cloud computing platform) and the hardware infrastructure being used will also influence the performance of the workflow and its constituent tasks.  When one considers all of these factors it becomes clear that fine tuning the resources for each of the tasks within such workflows "by hand" is both very complex and very difficult. 
+The rising popularity of scientific workflows and the enormity of the aggregate resource requirements of their constituent tasks \cite{ResourceProvisioning} presents an opportunity to try and fine tune the resources allocated to these tasks in order to achieve better performance. Since a scientific workflow is composed of many tasks which each have unique relationships between the resources they require, their input, and how it affects their performance, it becomes cumbersome or even futile to try and hand-pick the most efficient resource allocation for each individual task. Furthermore as the tasks themselves or their order in a workflow might change over time it is also difficult to adapt to this. In addition to all of this it also quite common that the users may not have the requisite knowledge to properly size the tasks themselves and tend to make poor estimations \cite{Predictability} of what a given task's resource requirements are. Finally it must also be considered that for a given use case the exact topology of the deployment scenario (i.e. whether it is being run on an individual computer, in a grid or cluster, or on a cloud computing platform) and the hardware infrastructure being used will also influence the performance of the workflow and its constituent tasks.  When one considers all of these factors it becomes clear that fine tuning the resources for each of the tasks within such workflows "by hand" is difficult and complex. 
 
 However it is also obvious that sizing tasks properly is of critical importance. Specifically for large scale, distributed computations the resources being requested are so large that even small improvements in efficiency represent a large amount of reclaimed resources which could be allocated to other users or could reduce costs (in a scenario where computational resources are being paid for by the workflow user). 
 
@@ -27,10 +24,10 @@ At this point it becomes quite reasonable to begin to consider whether machine l
 \section{Goal of the Thesis}
 \label{sec:goal}
 
-The goal of this thesis is to use reinforcement learning to improve the efficiency of scientific workflows by more accurately assigning resources to the individual tasks within the workflows. Specifically the CPU and memory usage will be examined using two different approaches: Gradient Bandits and Q-Learning, and compared to the performance when using the task's initial or default configurations.
+The goal of this thesis is to use reinforcement learning to improve the efficiency of scientific workflows by more accurately assigning resources to the individual tasks within the workflows. Specifically the CPU and memory usage will be examined using two different approaches: Gradient Bandits and Q-Learning, and compared to the performance when using the task's default configuration.
 
 %%=========================================
 \section{Structure of the Thesis}
 \label{sec:structure}
 
-The remainder of the thesis is structured as follows: first in the background chapter (cha. \ref{cha:background}) an overview and an explanation of the ideas and technologies relevant to this paper is given, and then in the related work chapter (cha. \ref{cha:related_work}) some interesting papers are discussed which addressed similar topics. After that the approach to the problem is described in the approach chapter (cha. \ref{cha:approach}) and finally in the evaluation chapter (cha. \ref{cha:evaluation}) the results are presented and analysed.
+The remainder of the thesis is structured as follows: in chapter \ref{cha:background} an overview and an explanation of the ideas and technologies relevant to this paper is given, and then in the related work chapter (chapter \ref{cha:related_work}) some interesting papers are discussed which addressed similar topics. After that the approach to the problem is described in the approach chapter (chapter \ref{cha:approach}) and finally in chapter \ref{cha:evaluation} the results are presented and analysed. The thesis concludes in chapter (TODO reference conclusion) with a summary and brief look towards other potential interesting areas of research.%\ref{cha:conclusion}
