--- a/refs.bib
+++ b/refs.bib
@@ -47,13 +47,6 @@
 	number       = 3,
 	pages        = {382--401}
 }
-@online{TheInquisitiveMind,
-	title        = {Ohnmacht – Ueber das Gefühl, das Leben nicht im Griff zu haben},
-	year         = 2018,
-	url          = {http://de.in-mind.org/article/ohnmacht-ueber-das-gefuehl-das-leben-nicht-im-griff-zu-haben},
-	urldate      = {2019-01-23},
-	editor       = {{de.in-mind.org}}
-}
 @inproceedings{FeedbackBasedAllocation,
 	title        = {Feedback-Based Resource Allocation for Batch Scheduling of Scientific Workflows},
 	author       = {Witt, Carl and Wagner, Dennis and Leser, Ulf},
@@ -110,30 +103,131 @@
 	url          = {https://www.nextflow.io/docs/latest/tracing.html#trace-report},
 	editor       = {{nextflow.io}}
 }
-@book{dag, title={Shootstrap Pipeline DAG}, url={https://www.nextflow.io/docs/latest/_images/dag.png}, journal={Nextflow}, publisher={Nextflow}, author={Nextflow}, year={2021}}
-@ARTICLE{Tanenbaum,
-    author = {Henri E. Bal and Jennifer G. Steiner and Andrew S. Tanenbaum},
-    title = {Programming languages for distributed computing systems},
-    journal = {ACM Computing Surveys},
-    year = {1989},
-    pages = {32--2}
+@book{dag,
+	title        = {Shootstrap Pipeline DAG},
+	author       = {Nextflow},
+	year         = 2021,
+	journal      = {Nextflow},
+	publisher    = {Nextflow},
+	url          = {https://www.nextflow.io/docs/latest/_images/dag.png}
 }
-@misc{Gray, place={Mountain View}, title={Jim Gray on eScience: A Transformed Scientific Method}, url={http://languagelog.ldc.upenn.edu/myl/JimGrayOnE-Science.pdf}, journal={NRC-CSTB}, publisher={California}, author={Gray, Jim}, year={2007}, month={Jan}}
+@article{Tanenbaum,
+	title        = {Programming languages for distributed computing systems},
+	author       = {Henri E. Bal and Jennifer G. Steiner and Andrew S. Tanenbaum},
+	year         = 1989,
+	journal      = {ACM Computing Surveys},
+	pages        = {32--2}
+}
+@misc{Gray,
+	title        = {Jim Gray on eScience: A Transformed Scientific Method},
+	author       = {Gray, Jim},
+	year         = 2007,
+	month        = {Jan},
+	journal      = {NRC-CSTB},
+	publisher    = {California},
+	url          = {http://languagelog.ldc.upenn.edu/myl/JimGrayOnE-Science.pdf},
+	place        = {Mountain View}
+}
 @book{Shields,
-author="Shields, Matthew",
-editor="Taylor, Ian J.
-and Deelman, Ewa
-and Gannon, Dennis B.
-and Shields, Matthew",
-title="Control- Versus Data-Driven Workflows",
-bookTitle="Workflows for e-Science: Scientific Workflows for Grids",
-year="2007",
-publisher="Springer London",
-address="London",
-pages="167--173",
-abstract="Workflow is typically defined as a sequence of operations or tasks needed to manage a business process or computational activity (Chapter 1). The representation of the sequence of operations or tasks is handled in many different ways by different people and varies from simple scripting languages, through graphs represented in textual or graphical form, to mathematical representations such as Petri Nets (Chapter 13) or $\pi$-calculus (Chapter 15).",
-isbn="978-1-84628-757-2",
-doi="10.1007/978-1-84628-757-2_11",
-url="https://doi.org/10.1007/978-1-84628-757-2_11"
+	title        = {Control- Versus Data-Driven Workflows},
+	author       = {Shields, Matthew},
+	year         = 2007,
+	booktitle    = {Workflows for e-Science: Scientific Workflows for Grids},
+	publisher    = {Springer London},
+	address      = {London},
+	pages        = {167--173},
+	doi          = {10.1007/978-1-84628-757-2_11},
+	isbn         = {978-1-84628-757-2},
+	url          = {https://doi.org/10.1007/978-1-84628-757-2_11},
+	editor       = {Taylor, Ian J. and Deelman, Ewa and Gannon, Dennis B. and Shields, Matthew},
+	abstract     = {Workflow is typically defined as a sequence of operations or tasks needed to manage a business process or computational activity (Chapter 1). The representation of the sequence of operations or tasks is handled in many different ways by different people and varies from simple scripting languages, through graphs represented in textual or graphical form, to mathematical representations such as Petri Nets (Chapter 13) or $\pi$-calculus (Chapter 15).}
 }
-
+@article{nextflow,
+	title        = {Nextflow enables reproducible computational workflows},
+	author       = {Di Tommaso, Paolo and Chatzou, Maria and Floden, Evan W and Barja, Pablo Prieto and Palumbo, Emilio and Notredame, Cedric},
+	year         = 2017,
+	journal      = {Nature Biotechnology},
+	volume       = 35,
+	number       = 4,
+	pages        = {316–319},
+	doi          = {10.1038/nbt.3820}
+}
+@book{sutton_barto,
+	title        = {Reinforcement learning: An introduction},
+	author       = {Sutton, Richard S. and Bach, Francis and Barto, Andrew G.},
+	year         = 2018,
+	publisher    = {MIT Press Ltd},
+	place        = {Massachusetts}
+}
+@article{deelman,
+	title        = {Workflows and e-science: An overview of workflow system features and capabilities},
+	author       = {Deelman, Ewa and Gannon, Dennis and Shields, Matthew and Taylor, Ian},
+	year         = 2009,
+	journal      = {Future Generation Computer Systems},
+	volume       = 25,
+	number       = 5,
+	pages        = {528–540},
+	doi          = {10.1016/j.future.2008.06.012}
+}
+@misc{parallelization,
+	title        = {Parallelization in Scientific Workflow Management Systems},
+	author       = {Marc Bux and Ulf Leser},
+	year         = 2013,
+	eprint       = {1303.7195},
+	archiveprefix = {arXiv},
+	primaryclass = {cs.DC}
+}
+@article{examining,
+	title        = {Examining the challenges of scientific workflows},
+	author       = {Gil, Yolanda and Deelman, Ewa and Ellisman, Mark and Fahringer, Thomas and Fox, Geoffrey and Gannon, Dennis and Goble, Carole and Livny, Miron and Moreau, Luc and Myers, Jim and et al.},
+	year         = 2007,
+	journal      = {Computer},
+	volume       = 40,
+	number       = 12,
+	pages        = {24–32},
+	doi          = {10.1109/mc.2007.421}
+}
+@article{kepler,
+	title        = {S04---introduction to scientific workflow management and the Kepler System},
+	author       = {Altintas, Ilkay and Ludaescher, Bertram and Klasky, Scott and Vouk, Mladen A.},
+	year         = 2006,
+	journal      = {Proceedings of the 2006 ACM/IEEE conference on Supercomputing  - SC '06},
+	doi          = {10.1145/1188455.1188669}
+}
+@article{pegasus,
+	title        = {Pegasus: A framework for mapping complex scientific workflows onto Distributed Systems},
+	author       = {Deelman, Ewa and Singh, Gurmeet and Su, Mei-Hui and Blythe, James and Gil, Yolanda and Kesselman, Carl and Mehta, Gaurang and Vahi, Karan and Berriman, G. Bruce and Good, John and et al.},
+	year         = 2005,
+	journal      = {Scientific Programming},
+	volume       = 13,
+	number       = 3,
+	pages        = {219–237},
+	doi          = {10.1155/2005/128026}
+}
+@inproceedings{resource_provisioning,
+	title        = {Resource Provisioning Options for Large-Scale Scientific Workflows},
+	author       = {Juve, Gideon and Deelman, Ewa},
+	year         = 2008,
+	booktitle    = {2008 IEEE Fourth International Conference on eScience},
+	volume       = {},
+	number       = {},
+	pages        = {608--613},
+	doi          = {10.1109/eScience.2008.160}
+}
+@article{kubernetes,
+	title        = {Borg, Omega, and kubernetes},
+	author       = {Burns, Brendan and Grant, Brian and Oppenheimer, David and Brewer, Eric and Wilkes, John},
+	year         = 2016,
+	journal      = {Communications of the ACM},
+	volume       = 59,
+	number       = 5,
+	pages        = {50–57},
+	doi          = {10.1145/2890784}
+}
+@article{yarn,
+	title        = {Apache Hadoop Yarn},
+	author       = {Vavilapalli, Vinod Kumar and Murthy, Arun C. and Douglas, Chris and Agarwal, Sharad and Konar, Mahadev and Evans, Robert and Graves, Thomas and Lowe, Jason and Shah, Hitesh and Seth, Siddharth and et al.},
+	year         = 2013,
+	journal      = {Proceedings of the 4th annual Symposium on Cloud Computing},
+	doi          = {10.1145/2523616.2523633}
+}
